--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 30px;
   border: 0.0625rem solid var(--chat-border-color);
   border-radius: 0.25rem;
   padding: 1rem;
@@ -15,4 +15,5 @@
 .chatButton {
   background-color: var(--secondary-button-color);
   color: var(--secondary-text-color);
+  align-self: self-end;
 }
