--- a/src/ui/Button/Button.module.css
+++ b/src/ui/Button/Button.module.css
@@ -10,6 +10,9 @@
   cursor: pointer;
   box-sizing: border-box;
   transition: opacity 0.4s linear;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 button:hover {
