--- a/src/ui/Button/Button.module.css
+++ b/src/ui/Button/Button.module.css
@@ -18,3 +18,9 @@
 button:hover {
   opacity: 0.8;
 }
+
+.button:disabled {
+  cursor: none;
+  background-color: var(--disabled-button-color);
+  color: var(--disabled-button-color);
+}
