--- a/src/components/MessageList/MessageList.module.css
+++ b/src/components/MessageList/MessageList.module.css
@@ -4,14 +4,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-image: url("../../assets/png/background.png");
 }
 
 .messageContainer {
   padding: 0 2rem;
   height: 100%;
   overflow: auto;
-  margin-bottom: 0.5rem;
+  background-image: url("../../assets/png/background.png");
 }
 
 .messageContainer::-webkit-scrollbar {
@@ -28,6 +27,7 @@
 }
 
 .footer {
+  height: 5rem;
   width: 100%;
   display: flex;
   align-items: center;
@@ -37,8 +37,8 @@
 }
 
 .messageButton {
-  height: 3rem;
-  width: 3rem;
+  height: 2rem;
+  width: 2rem;
   border-radius: 50%;
   background-color: var(--secondary-button-color);
   color: var(--secondary-text-color);
@@ -68,4 +68,17 @@
   border-color: transparent var(--receive-message-color) transparent transparent;
   top: 0;
   left: -0.625rem;
+}
+
+@media (max-width: 430px) {
+  .wrapper {
+    width: 100%;
+    height: 60vh;
+    gap: 1rem;
+  }
+
+  .footer {
+    height: 3rem;
+    padding: 0;
+  }
 }
