--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -8,3 +8,10 @@
   border-radius: 0.25rem;
   padding: 0.625rem;
 }
+
+@media (max-width: 430px) {
+  .main {
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+}
