--- a/src/ui/Button/Button.module.css
+++ b/src/ui/Button/Button.module.css
@@ -1,6 +1,6 @@
 .button {
   height: 2.5rem;
-  padding: 0.5rem 1rem 0.5rem 1rem;
+  padding: 0.5rem;
   border: none;
   border-radius: 0.25rem;
   font-weight: 400;
